infrastructure/security/policies/gatekeeper/policies/container-ratios/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerRatios
metadata:
  name: container-must-meet-memory-and-cpu-ratio
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
    - kube-system
  parameters:
    ratio: "1"
    cpuRatio: "10"
